--- a/mobile.css
+++ b/mobile.css
@@ -1,3 +1,12 @@
+/*
+███    ███  ██████  ██████  ██ ██      ███████
+████  ████ ██    ██ ██   ██ ██ ██      ██
+██ ████ ██ ██    ██ ██████  ██ ██      █████
+██  ██  ██ ██    ██ ██   ██ ██ ██      ██
+██      ██  ██████  ██████  ██ ███████ ███████
+*/
+
+
 
 /*@media screen and (max-width: 480px) and (orientation: portrait) */
 
