--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -1,10 +1,25 @@
 /*
-██████   ██████  ██████  ████████ ██████   █████  ██ ████████
-██   ██ ██    ██ ██   ██    ██    ██   ██ ██   ██ ██    ██
-██████  ██    ██ ██████     ██    ██████  ███████ ██    ██
-██      ██    ██ ██   ██    ██    ██   ██ ██   ██ ██    ██
-██       ██████  ██   ██    ██    ██   ██ ██   ██ ██    ██
+████████  █████  ██████  ██      ███████ ████████
+   ██    ██   ██ ██   ██ ██      ██         ██
+   ██    ███████ ██████  ██      █████      ██
+   ██    ██   ██ ██   ██ ██      ██         ██
+   ██    ██   ██ ██████  ███████ ███████    ██
 */
+/*
+ █████  ███    ██ ██████
+██   ██ ████   ██ ██   ██
+███████ ██ ██  ██ ██   ██
+██   ██ ██  ██ ██ ██   ██
+██   ██ ██   ████ ██████
+*/
+/*
+███    ███  ██████  ██████  ██ ██      ███████
+████  ████ ██    ██ ██   ██ ██ ██      ██
+██ ████ ██ ██    ██ ██████  ██ ██      █████
+██  ██  ██ ██    ██ ██   ██ ██ ██      ██
+██      ██  ██████  ██████  ██ ███████ ███████
+*/
+
 
 @media screen and (max-width: 1279px) {
   html {
