--- a/tablet.css
+++ b/tablet.css
@@ -1,18 +1,23 @@
 /*
-██████   ██████  ██████  ████████ ██████   █████  ██ ████████
-██   ██ ██    ██ ██   ██    ██    ██   ██ ██   ██ ██    ██
-██████  ██    ██ ██████     ██    ██████  ███████ ██    ██
-██      ██    ██ ██   ██    ██    ██   ██ ██   ██ ██    ██
-██       ██████  ██   ██    ██    ██   ██ ██   ██ ██    ██
+████████  █████  ██████  ██      ███████ ████████
+   ██    ██   ██ ██   ██ ██      ██         ██
+   ██    ███████ ██████  ██      █████      ██
+   ██    ██   ██ ██   ██ ██      ██         ██
+   ██    ██   ██ ██████  ███████ ███████    ██
 */
+
+
 @media screen and (min-width: 600px) {
   .mobile-container {
     padding-bottom: 30px;
   }
+}
+@media screen and (min-width: 600px) and (max-width: 1000px) {
   .wrappers {
     height: 88vh;
   }
 }
+
 
 
 @media screen and (min-width: 1001px) and (max-width: 1279px) {
@@ -106,7 +111,7 @@
   }
 
   .hero-to-movies {
-    background-size: 100% 100%;
+    background-size: 150% 100%;
   }
 
   .movies-to-actors {
