--- a/desktop.css
+++ b/desktop.css
@@ -16,7 +16,11 @@
     max-width: 7vw;*/
     width: 120px;
     width: 7vw;
+    -webkit-transition: color .6s ease 0s;
+    -o-transition: color .6s ease 0s;
     transition: color .6s ease 0s;
+    -webkit-transition: background-color .8s ease 0s;
+    -o-transition: background-color .8s ease 0s;
     transition: background-color .8s ease 0s;
   }
 
@@ -141,7 +145,8 @@
   }
 
   .feature {
-    flex-basis: 20%;
+    -ms-flex-preferred-size: 20%;
+        flex-basis: 20%;
     margin-bottom: 100px;
     /*padding: 35px 25px 0;*/
   }
@@ -165,6 +170,8 @@
 
   .read-more,
   .source {
+    -webkit-transition: background-color 900ms;
+    -o-transition: background-color 900ms;
     transition: background-color 900ms;
   }
 
@@ -172,38 +179,56 @@
   .source-1,
   .read-more-2,
   .source-2 {
-    box-shadow: 4px 4px 1px rgba(38, 38, 38, 0.4);
+    -webkit-box-shadow: 4px 4px 1px rgba(38, 38, 38, 0.4);
+            box-shadow: 4px 4px 1px rgba(38, 38, 38, 0.4);
+    -webkit-transition: -webkit-transform 500ms, -webkit-box-shadow 500ms;
+    transition: -webkit-transform 500ms, -webkit-box-shadow 500ms;
+    -o-transition: transform 500ms, box-shadow 500ms;
     transition: transform 500ms, box-shadow 500ms;
+    transition: transform 500ms, box-shadow 500ms, -webkit-transform 500ms, -webkit-box-shadow 500ms;
   }
 
   .read-more-3,
   .source-3 {
-    box-shadow: -4px 4px 1px rgba(38, 38, 38, 0.4);
+    -webkit-box-shadow: -4px 4px 1px rgba(38, 38, 38, 0.4);
+            box-shadow: -4px 4px 1px rgba(38, 38, 38, 0.4);
+    -webkit-transition: -webkit-transform 1s;
+    transition: -webkit-transform 1s;
+    -o-transition: transform 1s;
     transition: transform 1s;
+    transition: transform 1s, -webkit-transform 1s;
   }
 
   /*------ Button 1 (Read More + Source)  ---------*/
   /*-----------------------------------------------*/
   .button-wrapper:hover .read-more-1,
   .button-wrapper:hover .source-1 {
-    box-shadow: 20px 10px 4px rgba(38, 38, 38, 0.4);
-    transform: translate(-15px, 0);
+    -webkit-box-shadow: 20px 10px 4px rgba(38, 38, 38, 0.4);
+            box-shadow: 20px 10px 4px rgba(38, 38, 38, 0.4);
+    -webkit-transform: translate(-15px, 0);
+        -ms-transform: translate(-15px, 0);
+            transform: translate(-15px, 0);
   }
 
   /*------ Button 2 (Read More + Source)  ---------*/
   /*-----------------------------------------------*/
   .button-wrapper:hover .read-more-2,
   .button-wrapper:hover .source-2 {
-    box-shadow: 4px 20px 4px rgba(38, 38, 38, 0.4);
-    transform: translate(0, -15px);
+    -webkit-box-shadow: 4px 20px 4px rgba(38, 38, 38, 0.4);
+            box-shadow: 4px 20px 4px rgba(38, 38, 38, 0.4);
+    -webkit-transform: translate(0, -15px);
+        -ms-transform: translate(0, -15px);
+            transform: translate(0, -15px);
   }
 
   /*------ Button 3 (Read More + Source)  ---------*/
   /*-----------------------------------------------*/
   .button-wrapper:hover .read-more-3,
   .button-wrapper:hover .source-3 {
-    box-shadow: -16px 10px 4px rgba(38, 38, 38, 0.4);
-    transform: rotate3d(0, 1, 0, 360deg);
+    -webkit-box-shadow: -16px 10px 4px rgba(38, 38, 38, 0.4);
+            box-shadow: -16px 10px 4px rgba(38, 38, 38, 0.4);
+    -webkit-transform: rotate3d(0, 1, 0, 360deg);
+            transform: rotate3d(0, 1, 0, 360deg);
   }
 
   /*----------      Active        ------------*/
@@ -238,7 +263,10 @@
 
   .container {
     background-color: rgb(38, 38, 38);
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     height: 100vh;
     padding: 0 10px 100px;
@@ -250,18 +278,26 @@
     /*background-color: rgb(255, 237, 0);*/
     background-color: rgb(253, 227, 17);
     color: rgb(38, 38, 38);
-    flex: 1;
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
     overflow: hidden;
+    -webkit-transition: .5s;
+    -o-transition: .5s;
     transition: .5s;
     margin: 0 2%;
-    box-shadow: 0 20px 30px rgba(0, 0, 0, .1);
+    -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, .1);
+            box-shadow: 0 20px 30px rgba(0, 0, 0, .1);
     line-height: 0;
   }
 
   .box>img {
     width: 200%;
     height: calc(100% - 10vh);
-    object-fit: cover;
+    -o-object-fit: cover;
+       object-fit: cover;
+    -webkit-transition: .5s;
+    -o-transition: .5s;
     transition: .5s;
   }
 
@@ -271,7 +307,9 @@
   }
 
   .box:hover {
-    flex: 1 1 50%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 50%;
+            flex: 1 1 50%;
   }
 
   .box:hover>img {
@@ -300,7 +338,9 @@
   .footer-wrapper {
     height: 100%;
     width: 100%;
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     grid-auto-rows: 1fr 1fr;
   }
@@ -327,6 +367,8 @@
     background-size: cover;
     background-position: bottom;
     background-attachment: fixed;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
     grid-column: 1/4;
   }
 
@@ -346,10 +388,16 @@
   */
   .footer-address {
     background-color: black;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
     grid-row: 2/3;
     overflow: hidden;
     /*transition: transform 2s;*/
+    -webkit-transition: background-color 0s ease-in-out;
+    -o-transition: background-color 0s ease-in-out;
     transition: background-color 0s ease-in-out;
   }
 
@@ -359,7 +407,11 @@
     background-repeat: no-repeat;
     background-size: 55%;
     background-position: center;
+    -webkit-transition: -webkit-transform 2s;
+    transition: -webkit-transform 2s;
+    -o-transition: transform 2s;
     transition: transform 2s;
+    transition: transform 2s, -webkit-transform 2s;
     position: relative;
     /*  visibility:visible;
     opacity: 1;
@@ -370,7 +422,8 @@
   }
 
   .address-map {
-    flex-basis: 150%;
+    -ms-flex-preferred-size: 150%;
+        flex-basis: 150%;
     margin: 20px 10px 20px 20px;
   }
 
@@ -379,10 +432,19 @@
     height: 100%;
     margin-right: 10px;
     padding-bottom: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
 
   /*
@@ -400,6 +462,8 @@
   ██      ██   ██  ██████  ██      ██ ███████ ███████
   */
   .footer-bat-profile {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
     overflow: hidden;
     /*removed whitespace at bottom of page*/
@@ -438,6 +502,8 @@
     /*height: 40vh;*/
     width: 100%;
     background-color: white;
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
     grid-column: 3/4;
     overflow: hidden;
   }
@@ -449,7 +515,11 @@
     background-repeat: no-repeat;
     background-size: 240%;
     background-position: center;
+    -webkit-transition: -webkit-transform 2s ease-out;
+    transition: -webkit-transform 2s ease-out;
+    -o-transition: transform 2s ease-out;
     transition: transform 2s ease-out;
+    transition: transform 2s ease-out, -webkit-transform 2s ease-out;
   }
 
   /*
@@ -472,7 +542,11 @@
   }
 
   .twitter {
+    -webkit-transition: -webkit-transform 1.5s;
+    transition: -webkit-transform 1.5s;
+    -o-transition: transform 1.5s;
     transition: transform 1.5s;
+    transition: transform 1.5s, -webkit-transform 1.5s;
   }
 
   /*
@@ -485,7 +559,6 @@
   .copyright {
     background-color: coral;
     /*display: inline-block;*/
-    font-family: 'Cormorant', sans-serif;
     position: relative;
     top: 20px;
     text-decoration: none;
@@ -513,6 +586,8 @@
   .social-ul,
   .copyright {
     opacity: 0;
+    -webkit-transition: opacity 5s ease-in-out;
+    -o-transition: opacity 5s ease-in-out;
     transition: opacity 5s ease-in-out;
   }
 
@@ -590,15 +665,23 @@
   */
   .footer-address:hover {
     background-color: rgb(252, 243, 201);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     /*flex-direction: column;*/
+    -webkit-transition: background-color 6s ease 0s;
+    -o-transition: background-color 6s ease 0s;
     transition: background-color 6s ease 0s;
   }
 
   /*---  Logo on RETURN----*/
   .footer-address:hover .address-logo {
-    transform: translateX(-500px) rotate(390deg);
+    -webkit-transform: translateX(-500px) rotate(390deg);
+        -ms-transform: translateX(-500px) rotate(390deg);
+            transform: translateX(-500px) rotate(390deg);
   }
 
   .footer-address:hover .address-map {
@@ -663,7 +746,9 @@
   .footer-info:hover .info-logo {
     display: inline;
     background-size: 100%;
-    transform: translateY(300px);
+    -webkit-transform: translateY(300px);
+        -ms-transform: translateY(300px);
+            transform: translateY(300px);
   }
 
   .footer-info:hover .info-text {
@@ -709,10 +794,19 @@
     height: 40%;
     width: 100%;
     /*margin-bottom: 20px;*/
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
   }
 
   .footer-info:hover .social-list {
@@ -755,19 +849,26 @@
 
   .a-text:hover .facebook {
     background-color: rgba(59, 89, 152, 0.8);
-    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+        -ms-transform: scale(1.2);
+            transform: scale(1.2);
     border-radius: 50%;
   }
 
   .a-text:hover .twitter,
   .twitter:hover {
-    transform: rotate(390deg);
+    -webkit-transform: rotate(390deg);
+        -ms-transform: rotate(390deg);
+            transform: rotate(390deg);
     /*background: linear-gradient(45deg, #66757f, #00ACEE, #36D8FF, #f5f8fa, #ffffff);*/
   }
 
   .a-text:hover .instagram {
-    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+        -ms-transform: scale(1.2);
+            transform: scale(1.2);
     border-radius: 17px;
+    background: -o-radial-gradient(30% 107%, circle, rgba(252, 243, 150, 0.7) 0%, rgba(252, 243, 150, 0.7) 5%, rgba(252, 89, 73, 0.7) 45%, rgba(214, 36, 159, 0.7) 60%, rgba(40, 90, 235, 0.7) 90%);
     background: radial-gradient(circle at 30% 107%, rgba(252, 243, 150, 0.7) 0%, rgba(252, 243, 150, 0.7) 5%, rgba(252, 89, 73, 0.7) 45%, rgba(214, 36, 159, 0.7) 60%, rgba(40, 90, 235, 0.7) 90%);
     /*  background: radial-gradient(circle at 30% 107%, rgb(252, 243, 150) 0%, rgb(252, 243, 150) 5%, rgb(252, 89, 73) 45%, rgb(214, 36, 159) 60%, rgb(40, 90, 235) 90%);*/
   }
