--- a/style.css
+++ b/style.css
@@ -5,7 +5,8 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   /*outline: 1px solid red;*/
 }
 
@@ -15,7 +16,7 @@ html {
 }
 
 body {
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', Helvetica, sans-serif;
   width: 100%;
   max-width: 100%;
   /*  height: 100%;*/
@@ -70,8 +71,12 @@ nav ul {
   /*background-color: aqua;*/
   /*width: 50vw;*/
   /*margin: 0 auto;*/
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   text-align: center;
 }
 
@@ -93,7 +98,7 @@ nav ul li a {
   color: whitesmoke;
   display: block;
   /* clickable on outside text */
-  font-family: 'Lato', sans-serif;
+  font-family: 'Lato', Helvetica, sans-serif;
   font-size: 1rem;
   font-weight: 700;
   text-decoration: none;
@@ -120,19 +125,23 @@ nav ul li a {
   /* iOS Safari */
   -webkit-user-select: none;
   /* Safari */
-  -khtml-user-select: none;
   /* Konqueror HTML */
   -moz-user-select: none;
   /* Old versions of Firefox */
   -ms-user-select: none;
   /* Internet Explorer/Edge */
   user-select: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 #bat-video {
-  object-fit: cover;
+  -o-object-fit: cover;
+     object-fit: cover;
   width: 100%;
 }
 
@@ -143,6 +152,9 @@ nav ul li a {
 ██      ██    ██ ██  ██ ██    ██
 ██       ██████  ██   ████    ██
 */
+::-moz-selection {
+  background-color: rgb(253, 227, 17);
+}
 ::selection {
   background-color: rgb(253, 227, 17);
 }
@@ -154,7 +166,7 @@ nav ul li a {
   color: whitesmoke;
   color: rgb(253, 227, 17);
   cursor: default;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Lato', Helvetica, sans-serif;
   height: 23%;
   position: absolute;
   text-align: center;
@@ -190,7 +202,7 @@ nav ul li a {
 .movies h2,
 .actors h2,
 #gallery h2 {
-  font-family: 'Fredericka the Great', cursive;
+  font-family: 'Fredericka the Great', 'Comic Sans MS', sans-serif, cursive;
   font-size: 5rem;
   letter-spacing: 2rem;
   text-align: center;
@@ -200,7 +212,6 @@ nav ul li a {
   /* iOS Safari */
   -webkit-user-select: none;
   /* Safari */
-  -khtml-user-select: none;
   /* Konqueror HTML */
   -moz-user-select: none;
   /* Old versions of Firefox */
@@ -223,7 +234,7 @@ nav ul li a {
 }
 
 h3 {
-  font-family: 'Fredericka the Great', cursive;
+  font-family: 'Fredericka the Great', 'Comic Sans MS', sans-serif, cursive;
   font-size: 2rem;
   margin: 40px 0 40px;
 }
@@ -244,7 +255,7 @@ h3 {
 
 .text-wrapper p {
   /*background-color: coral;*/
-  font-family: 'Cormorant Upright', serif;
+  font-family: 'Cormorant Upright', Georgia, serif;
   cursor: default;
   font-size: 1.6em;
   line-height: 1.2em;
@@ -255,7 +266,7 @@ h3 {
 .mobile-box>span,
 .mobile-box a span {
   display: block;
-  font-family: 'Cormorant', sans-serif;
+  font-family: 'Cormorant', Helvetica, sans-serif;
   font-size: 2em;
   font-weight: 500;
   line-height: 2.6em;
@@ -274,8 +285,7 @@ h3 {
 }*/
 
 .follow-b {
-  font-family: 'Fredericka the Great', cursive;
-  font-family: 'Cormorant', sans-serif;
+  font-family: 'Cormorant', Helvetica, sans-serif;
   cursor: default;
   font-size: 3em;
   font-weight: 500;
@@ -285,7 +295,6 @@ h3 {
   /* iOS Safari */
   -webkit-user-select: none;
   /* Safari */
-  -khtml-user-select: none;
   /* Konqueror HTML */
   -moz-user-select: none;
   /* Old versions of Firefox */
@@ -295,7 +304,7 @@ h3 {
 }
 
 .info-text {
-  font-family: 'Cormorant Upright', serif;
+  font-family: 'Cormorant Upright', Georgia, serif;
 }
 
 .italics {
@@ -386,10 +395,16 @@ h3 {
 .boxes {
   /*  ===   If add height, boxes will overlap   ===== */
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap;
-  align-content: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -ms-flex-line-pack: center;
+      align-content: center;
   /*  border: solid whitesmoke;
   border-width: 0 12px 0;*/
 }
@@ -433,33 +448,51 @@ h3 {
 /*----- Dark Knight Poster ---------*/
 /*----------------------------------*/
 .dark-knight-poster {
+  -webkit-transition: -webkit-transform 800ms, -webkit-box-shadow 800ms;
+  transition: -webkit-transform 800ms, -webkit-box-shadow 800ms;
+  -o-transition: transform 800ms, box-shadow 800ms;
   transition: transform 800ms, box-shadow 800ms;
+  transition: transform 800ms, box-shadow 800ms, -webkit-transform 800ms, -webkit-box-shadow 800ms;
 }
 
 .picture-wrapper:hover .dark-knight-poster {
-  box-shadow: 20px 10px 4px rgba(38, 38, 38, 0.4);
-  transform: translate(-15px, 0);
+  -webkit-box-shadow: 20px 10px 4px rgba(38, 38, 38, 0.4);
+          box-shadow: 20px 10px 4px rgba(38, 38, 38, 0.4);
+  -webkit-transform: translate(-15px, 0);
+      -ms-transform: translate(-15px, 0);
+          transform: translate(-15px, 0);
 }
 
 /*----- Batman & Robin Poster -------*/
 /*-----------------------------------*/
 .batman-robin-poster {
+  -webkit-transition: -webkit-transform 1.2s ease-in-out;
+  transition: -webkit-transform 1.2s ease-in-out;
+  -o-transition: transform 1.2s ease-in-out;
   transition: transform 1.2s ease-in-out;
+  transition: transform 1.2s ease-in-out, -webkit-transform 1.2s ease-in-out;
   /*pointer-events: none;*/
 }
 
 .batman-robin-wrapper:hover .batman-robin-poster {
-  transform: rotate(360deg);
+  -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+          transform: rotate(360deg);
 }
 
 /*----- Batman Returns Poster --------*/
 /*------------------------------------*/
 .batman-returns-poster {
+  -webkit-transition: -webkit-transform 1s ease-in-out;
+  transition: -webkit-transform 1s ease-in-out;
+  -o-transition: transform 1s ease-in-out;
   transition: transform 1s ease-in-out;
+  transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
 }
 
 .picture-wrapper:hover .batman-returns-poster {
-  transform: rotate3d(0, 1, 0, 360deg);
+  -webkit-transform: rotate3d(0, 1, 0, 360deg);
+          transform: rotate3d(0, 1, 0, 360deg);
 }
 
 /*
@@ -491,7 +524,10 @@ h3 {
   background-color: rgba(38, 38, 38, 0.8);
   display: inline-block;
   padding: 10px;
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
   width: 140px;
 }
 
@@ -529,4 +565,8 @@ h3 {
 
 abbr {
   text-decoration: none;
+}
+
+.copyright {
+  font-family: 'Cormorant', Helvetica, sans-serif;
 }
