--- a/desktop.css
+++ b/desktop.css
@@ -6,6 +6,7 @@
 ██████  ███████ ███████ ██   ██    ██     ██████  ██
 */
 @media screen and (min-width: 1280px) {
+  
   nav ul {
     /*margin-left: 21vw;*/
   }
@@ -158,14 +159,20 @@
   ██   ██ ██    ██    ██       ██    ██    ██ ██  ██ ██
   ██████   ██████     ██       ██     ██████  ██   ████
   */
+  .button-wrapper a {
+    display: block;
+    /*-webkit-backface-visibility: hidden;
+    -webkit-transform-style: preserve-3d;*/
+
+  }
   .button-wrapper a:hover {
-    background-color: rgba(38, 38, 38, 0.8);
-    color: rgb(253, 227, 17);
+/*    background-color: rgba(38, 38, 38, 0.8);
+    color: rgb(253, 227, 17);*/
   }
 
   .button-wrapper a:active {
-    background-color: rgba(252, 226, 16, 0.5);
-    color: rgb(38, 38, 38);
+/*    background-color: rgba(252, 226, 16, 0.5);
+    color: rgb(38, 38, 38);*/
   }
 
   .read-more,
@@ -210,6 +217,7 @@
             transform: translate(-15px, 0);
   }
 
+
   /*------ Button 2 (Read More + Source)  ---------*/
   /*-----------------------------------------------*/
   .button-wrapper:hover .read-more-2,
@@ -231,25 +239,7 @@
             transform: rotate3d(0, 1, 0, 360deg);
   }
 
-  /*----------      Active        ------------*/
-  /*-------------------------------------------*/
-  /*  .button-wrapper:active .read-more,
-  .button-wrapper:active .source {
-    background-color: rgba(252, 226, 16, 0.5);
-  }
-  */
-  /*  .read-more-1,
-  .source-1,
-  .read-more-2,
-  .source-2 {
-    box-shadow: 4px 4px 1px rgba(38, 38, 38, 0.4);
-    transition: transform 500ms, box-shadow 500ms;
-  }
-  .read-more-3,
-  .source-3 {
-    box-shadow: -4px 4px 1px rgba(38, 38, 38, 0.4);
-    transition: transform 1s;
-  }*/
+
   /*
    ██████   █████  ██      ██      ███████ ██████  ██    ██
   ██       ██   ██ ██      ██      ██      ██   ██  ██  ██
