--- a/tablet.css
+++ b/tablet.css
@@ -30,12 +30,10 @@
   }
 
   #hero-text {
-    border: 4px rgb(253, 227, 17);
-    border-style: double;
-    background-color: rgba(123, 157, 201, 0.6);
     background-color: rgba(245, 245, 245, 0.2);
-    height: 100px;
+    border: 4px double rgb(253, 227, 17);
     bottom: 14vh;
+    height: 100px;
   }
 
   #hero h1,
@@ -186,8 +184,8 @@
   }
 
   .mobile-followb-wrapper {
-    width: 100%;
     margin: 0 auto;
+    width: 100%;
   }
 
   .follow-b {
