button pseudo classes

--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
   margin: 0;
   padding: 0;
   -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 html {
@@ -19,7 +19,6 @@ body {
   max-width: 100%;
   width: 100%;
 }
-
 
 /*
 ███    ██  █████  ██    ██
@@ -61,8 +60,8 @@ nav ul {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   text-align: center;
 }
 
@@ -85,8 +84,6 @@ nav ul li a {
   text-transform: capitalize;
 }
 
-
-
 /*
 ██   ██ ███████ ██████   ██████
 ██   ██ ██      ██   ██ ██    ██
@@ -98,7 +95,6 @@ nav ul li a {
   background-color: chocolate;
   position: relative;
   width: 100%;
-  
   -webkit-touch-callout: none;
   /* iOS Safari */
   -webkit-user-select: none;
@@ -113,13 +109,13 @@ nav ul li a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 #bat-video {
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   width: 100%;
 }
 
@@ -133,6 +129,7 @@ nav ul li a {
 ::-moz-selection {
   background-color: rgb(253, 227, 17);
 }
+
 ::selection {
   background-color: rgb(253, 227, 17);
 }
@@ -167,7 +164,6 @@ nav ul li a {
   letter-spacing: 2rem;
   margin: auto;
   text-align: center;
-  
   -webkit-touch-callout: none;
   /* iOS Safari */
   -webkit-user-select: none;
@@ -242,7 +238,6 @@ h3 {
   font-size: 3em;
   font-weight: 500;
   width: 100%;
-  
   -webkit-touch-callout: none;
   /* iOS Safari */
   -webkit-user-select: none;
@@ -288,7 +283,6 @@ h3 {
   margin-top: -70px;
   visibility: hidden;
 }*/
-
 /*
 ██     ██ ██████   █████  ██████  ██████  ███████ ██████  ███████
 ██     ██ ██   ██ ██   ██ ██   ██ ██   ██ ██      ██   ██ ██
@@ -345,12 +339,12 @@ h3 {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -ms-flex-pack: space-evenly;
+  justify-content: space-evenly;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+  flex-wrap: wrap;
   -ms-flex-line-pack: center;
-      align-content: center;
+  align-content: center;
 }
 
 .feature {
@@ -367,7 +361,6 @@ h3 {
 ██      ██ ██         ██    ██    ██ ██   ██ ██
 ██      ██  ██████    ██     ██████  ██   ██ ███████
 */
-
 .picture-wrapper {
   display: inline-block;
 }
@@ -393,10 +386,10 @@ h3 {
 
 .picture-wrapper:hover .dark-knight-poster {
   -webkit-box-shadow: 20px 10px 4px rgba(38, 38, 38, 0.4);
-          box-shadow: 20px 10px 4px rgba(38, 38, 38, 0.4);
+  box-shadow: 20px 10px 4px rgba(38, 38, 38, 0.4);
   -webkit-transform: translate(-15px, 0);
-      -ms-transform: translate(-15px, 0);
-          transform: translate(-15px, 0);
+  -ms-transform: translate(-15px, 0);
+  transform: translate(-15px, 0);
 }
 
 /*----- Batman & Robin Poster -------*/
@@ -412,8 +405,8 @@ h3 {
 
 .batman-robin-wrapper:hover .batman-robin-poster {
   -webkit-transform: rotate(360deg);
-      -ms-transform: rotate(360deg);
-          transform: rotate(360deg);
+  -ms-transform: rotate(360deg);
+  transform: rotate(360deg);
 }
 
 /*----- Batman Returns Poster --------*/
@@ -428,7 +421,7 @@ h3 {
 
 .picture-wrapper:hover .batman-returns-poster {
   -webkit-transform: rotate3d(0, 1, 0, 360deg);
-          transform: rotate3d(0, 1, 0, 360deg);
+  transform: rotate3d(0, 1, 0, 360deg);
 }
 
 /*
@@ -459,29 +452,44 @@ h3 {
   display: inline-block;
   padding: 10px;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
   width: 140px;
 }
 
 .button-wrapper a {
+  background-color: rgba(38, 38, 38, 0.85);
   color: rgb(253, 227, 17);
 }
 
-.button-wrapper a:visited {
-  background-color: rgb(47, 46, 46);
-  color: rgb(238, 222, 110);
-}
 
-.button-wrapper a:active {
-  background-color: rgba(252, 226, 16, 0.5);
+.button-wrapper a:visited {
+  background-color: rgb(61, 60, 60);
+  color: rgb(250, 185, 86);
+}
+.button-wrapper a:visited:focus {
+  color: rgb(253, 227, 17);
+}
+.button-wrapper a:visited:hover {
+  color: rgb(252, 180, 69);
+}
+.button-wrapper a:visited:active {
   color: rgb(38, 38, 38);
-  text-decoration: none;
 }
 
 .button-wrapper a:focus {
   text-decoration: underline;
+}
+.button-wrapper a:hover {
+  background-color: rgba(38, 38, 38, 0.85);
+  color: rgb(253, 227, 17);
+  cursor: pointer;
+}
+.button-wrapper a:active {
+  background-color: rgba(252, 226, 16, 0.5);
+  color: rgb(38, 38, 38);
+  /*text-decoration: none;*/
 }
 
 /*
