--- a/desktop.css
+++ b/desktop.css
@@ -127,15 +127,12 @@
   .button-wrapper {
     -webkit-backface-visibility: hidden;
   }
-  .button-wrapper a:hover {
-    background-color: rgba(38, 38, 38, 0.85);
-    color: rgb(253, 227, 17);
-  }
 
-  .button-wrapper a:active {
+
+/*  .button-wrapper a:active {
     background-color: rgba(252, 226, 16, 0.5);
     color: rgb(38, 38, 38);
-  }
+  }*/
 
   .read-more,
   .source {
@@ -233,25 +230,25 @@
             flex: 1;
     overflow: hidden;
     -webkit-transition: .5s;
-    -o-transition: .5s;
-    transition: .5s;
+    -o-transition: 500ms;
+    transition: 500ms;
     margin: 0 2%;
     -webkit-box-shadow: 0 20px 30px rgba(0, 0, 0, .1);
             box-shadow: 0 20px 30px rgba(0, 0, 0, .1);
     line-height: 0;
   }
 
-  .box>img {
-    width: 200%;
+  .box img {
+    width: 100%;
     height: calc(100% - 10vh);
     -o-object-fit: cover;
        object-fit: cover;
-    -webkit-transition: .5s;
-    -o-transition: .5s;
-    transition: .5s;
+    -webkit-transition: 500ms;
+    -o-transition: 500ms;
+    transition: 500ms;
   }
 
-  .box>span {
+  .box span {
     display: block;
     height: 10vh;
   }
@@ -262,7 +259,7 @@
             flex: 1 1 50%;
   }
 
-  .box:hover>img {
+  .box:hover img {
     width: 100%;
     height: 100%;
   }
