--- a/tablet-and-mobile.css
+++ b/tablet-and-mobile.css
@@ -20,7 +20,6 @@
 ██      ██  ██████  ██████  ██ ███████ ███████
 */
 
-
 @media screen and (max-width: 1279px) {
   html {
     overflow: scroll;
@@ -115,10 +114,9 @@
  */
   #movies::before,
   #actors::before,
-  #gallery::before
-  /*,
+  #gallery::before,
   #contact::before
-  */ {
+   {
     content: '';
     display: block;
     height: 12vh;
