hero-text adjusted 1980px

--- a/desktop.css
+++ b/desktop.css
@@ -40,23 +40,21 @@
 
   #hero-text {
     border: 7px double rgb(253, 227, 17);
+    height: 30%;
   }
 
   #hero h1 {
     font-size: 6rem;
     font-weight: bold;
-    height: 65%;
     letter-spacing: 1rem;
     text-indent: 1rem;
-    padding: 12px;
   }
   
   #hero h2 {
     font-size: 1.6rem;
     font-weight: 400;
-    height: 35%;
     letter-spacing: 0.6rem;
-    padding-top: 10px;
+    margin-top: 10px;
     text-indent: 0.6rem;
     word-spacing: 0.2rem;
   }
