--- a/desktop.css
+++ b/desktop.css
@@ -40,14 +40,12 @@
 
   #hero-text {
     border: 7px double rgb(253, 227, 17);
-    max-height: 30%;
   }
 
   #hero h1 {
     font-size: 6rem;
     font-weight: bold;
     letter-spacing: 1rem;
-    margin-top: 10px;
     text-indent: 1rem;
   }
   
@@ -55,6 +53,7 @@
     font-size: 1.6rem;
     font-weight: 400;
     letter-spacing: 0.6rem;
+    padding-bottom: 20px;
     text-indent: 0.6rem;
     word-spacing: 0.2rem;
   }
