--- a/style.css
+++ b/style.css
@@ -229,7 +229,7 @@ h3 {
   font-size: 2.2em;
   font-style: italic;
   font-weight: 500;
-  line-height: 2.6em;
+  /*line-height: 2.6em;*/
 }
 
 .follow-b {
